bloonix-server (0.60) released at 2017-01-02

    * Fixed: checking if max_sms is reached.

bloonix-server (0.59) released at 2016-10-14

    * Improved log message if a sms were not sent successfully.
    * Improved logging and log the escalation time of a contact.

bloonix-server (0.58) released at 2016-04-24

    * Fixed service_name in mail notifications for overdue
      service checks.

bloonix-server (0.57) released at 2016-04-19

    * Fixed redirect mail notifications.

bloonix-server (0.56) released at 2016-04-18

    * Fixed next_timeout setting.

bloonix-server (0.55) released at 2016-04-17

    * Fixed some issues with scheduled services and srvchk.

bloonix-server (0.54) released at 2016-04-08

    * Fixed last_check setting for checks that have a scheduled
      downtime.
    * Now only services are pushed to the agents if the host or
      service has no scheduled downtime configured.

bloonix-server (0.53) released at 2016-04-06

    * Implement global var %RND(num)% for command options.

bloonix-server (0.52) released at 2016-04-04

    * Check /bin/systemctl instead of /usr/lib/systemd to
      determine if systemd is used.

bloonix-server (0.51) released at 2016-03-31

    * Implemented support for Elasticsearch index aliases.

bloonix-server (0.50) released at 2016-03-29

    * Fixed systemctl errors.

bloonix-server (0.49) released at 2016-03-25

    * bloonix-update-agent-host-config: added options 'test' and 'when'.
    * Fixed systemd/sysvinit/upstart installation routines.

bloonix-server (0.48) released at 2016-03-20

    * Fixed: update the service status if the agent was dead
      and the service is a volatile check.

bloonix-server (0.47) released at 2016-02-17

    * Fixed: retry_interval of services were ignored.

bloonix-server (0.46) released at 2016-02-13

    * Fixed: check maintenance version after the first
      database connection.

bloonix-server (0.45) released at 2016-02-11
