@@ -365,7 +365,7 @@ database {
 
 elasticsearch {
     proto http
-    host 127.0.0.1:9200
+    host localhost:9200
     timeout 60
     mode balanced
 }
